test/invalid/idl/union-promise.webidl
typedef (Promise<DOMString> or boolean) Typedef;
